--- a/index.html
+++ b/index.html
@@ -257,222 +257,6 @@
         </div>
     </div>
 </section>
-<!-- <section class="more-features">
-    <div class="wrapper">
-        <div class="more-features-row">
-            <div class="more-features-item">
-                <div class="more-features-item-img">
-                    <svg class="mf-desktop" data-name="mf-desktop" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.79 76.8">
-                        <g>
-                            <path d="M989.73,973.07v33.27h0l-10,10.06-10,10.06-10-10.06-10.67-10.07h0V973.07c0-1.73,1.84-3.14,4.08-3.14h32.63C987.89,969.93,989.73,971.35,989.73,973.07Z" transform="translate(-948.94 -949.67)" fill="#00aa9e"/>
-                            <path d="M989.73,952.81v33.27h0l-10,10.06-10,10.06-10-10.06-10.67-10.07h0V952.81c0-1.73,1.84-3.14,4.08-3.14h32.63C987.89,949.67,989.73,951.08,989.73,952.81Z" transform="translate(-948.94 -949.67)" fill="#404040"/>
-                        </g>
-                        <path d="M979.25,968H959.42a1.42,1.42,0,0,0-1.42,1.42v12.75a1.42,1.42,0,0,0,1.42,1.42h7.08a5.91,5.91,0,0,1-.43,2.83h-.29a.71.71,0,0,0,0,1.42h7.1a.71.71,0,0,0,0-1.42h-.29a5.89,5.89,0,0,1-.43-2.83h7.08a1.42,1.42,0,0,0,1.42-1.42V969.43A1.42,1.42,0,0,0,979.25,968ZM967.92,983.6h0Zm2.83,0h0Zm8.5-2.84H959.42V969.43h19.83Z" transform="translate(-948.94 -949.67)" fill="#e3e3e2"/>
-                    </svg>
-                </div>
-                <div class="more-features-item-inf">
-                    <div class="more-features-item-name">
-                        Responsive & multipurpose
-                    </div>
-                    <div class="more-features-item-classification">
-                        Desktops, Tablets & Phones
-                    </div>
-                    <div class="more-features-description">
-                        Proin in magna a ipsum viverra scelerisque eu nec turp, Nunc vestibulum fringilla accumsan. Praesent arcu turpis.
-                    </div>
-                </div>
-            </div>
-            <div class="more-features-item">
-                <div class="more-features-item-img">
-                    <svg class="mf-puzzle" data-name="mf-puzzle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.79 76.8">
-                        <path d="M989.73,973.07v33.27h0l-10,10.06-10,10.06-10-10.06-10.67-10.07h0V973.07c0-1.73,1.84-3.14,4.08-3.14h32.63C987.89,969.93,989.73,971.35,989.73,973.07Z" transform="translate(-948.94 -949.67)" fill="#383838"/>
-                        <path d="M989.73,952.81v33.27h0l-10,10.06-10,10.06-10-10.06-10.67-10.07h0V952.81c0-1.73,1.84-3.14,4.08-3.14h32.63C987.89,949.67,989.73,951.08,989.73,952.81Z" transform="translate(-948.94 -949.67)" fill="#00aa9e"/>
-                        <path d="M965.22,982.46a2,2,0,0,1-1.44-.6,1.47,1.47,0,0,0-2.64.82c-.49,2.3-.45,3.77.15,4.51a1.12,1.12,0,0,0,.85.45l12.7,0a3,3,0,0,0,3-2.89v-8.35a3.68,3.68,0,0,0-.5-2.52,1.2,1.2,0,0,0-1.4-.18,5.94,5.94,0,0,1-3.63.22,1.81,1.81,0,0,1-.51-.18s0-.11.24-.3a3,3,0,0,0,1-2.24,3.15,3.15,0,0,0-6.29,0,3.18,3.18,0,0,0,1.13,2.32l.16.17a3.12,3.12,0,0,1-.83.23,8.37,8.37,0,0,1-3.31-.3c-1-.24-1.67-.32-2,.06s-1.34,1.73-.76,4.66c.09.45.36,1.81,1.39,1.81a1.71,1.71,0,0,0,1.13-.6,2,2,0,0,1,3.47,1.09A1.87,1.87,0,0,1,965.22,982.46Z" transform="translate(-948.94 -949.67)" fill="#e3e3e2"/>
-                    </svg>
-                </div>
-                <div class="more-features-item-inf">
-                    <div class="more-features-item-name">
-                        Easy customization
-                    </div>
-                    <div class="more-features-item-classification">
-                        One Click Demo Content Installation
-                    </div>
-                    <div class="more-features-description">
-                        Proin in magna a ipsum viverra scelerisque eu nec turp, Nunc vestibulum fringilla accumsan. Praesent arcu turpis.
-                    </div>
-                </div>
-            </div>
-            <div class="more-features-item">
-                <div class="more-features-item-img">
-                    <svg class="mf-star" data-name="mf-star" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.79 76.8">
-                        <g>
-                            <path d="M989.73,973.07v33.27h0l-10,10.06-10,10.06-10-10.06-10.67-10.07h0V973.07c0-1.73,1.84-3.14,4.08-3.14h32.63C987.89,969.93,989.73,971.35,989.73,973.07Z" transform="translate(-948.94 -949.67)" fill="#00aa9e"/>
-                            <path d="M989.73,952.81v33.27h0l-10,10.06-10,10.06-10-10.06-10.67-10.07h0V952.81c0-1.73,1.84-3.14,4.08-3.14h32.63C987.89,949.67,989.73,951.08,989.73,952.81Z" transform="translate(-948.94 -949.67)" fill="#404040"/>
-                        </g>
-                        <path d="M972.56,974.54,969.33,968l-3.22,6.53-7.2,1,5.21,5.08-1.23,7.18,6.44-3.39,6.44,3.39-1.23-7.18,5.21-5.08Z" transform="translate(-948.94 -949.67)" fill="#e3e3e2"/>
-                    </svg>
-                </div>
-                <div class="more-features-item-inf">
-                    <div class="more-features-item-name">
-                        Unlimited features
-                    </div>
-                    <div class="more-features-item-classification">
-                        Shortcodes, Typography & Different Layouts
-                    </div>
-                    <div class="more-features-description">
-                        Proin in magna a ipsum viverra scelerisque eu nec turp, Nunc vestibulum fringilla accumsan. Praesent arcu turpis.
-                    </div>
-                </div>
-            </div>
-            <div class="more-features-item">
-                <div class="more-features-item-img">
-                    <svg class="mf-menu" data-name="mf-menu" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.79 76.8">
-                        <g>
-                            <path d="M989.73,973.07v33.27h0l-10,10.06-10,10.06-10-10.06-10.67-10.07h0V973.07c0-1.73,1.84-3.14,4.08-3.14h32.63C987.89,969.93,989.73,971.35,989.73,973.07Z" transform="translate(-948.94 -949.67)" fill="#00aa9e"/>
-                            <path d="M989.73,952.81v33.27h0l-10,10.06-10,10.06-10-10.06-10.67-10.07h0V952.81c0-1.73,1.84-3.14,4.08-3.14h32.63C987.89,949.67,989.73,951.08,989.73,952.81Z" transform="translate(-948.94 -949.67)" fill="#404040"/>
-                        </g>
-                        <path d="M977.77,968.19H960.89a1.3,1.3,0,0,0-1.3,1.3v16.88a1.3,1.3,0,0,0,1.3,1.3h16.88a1.3,1.3,0,0,0,1.3-1.3V969.49A1.3,1.3,0,0,0,977.77,968.19Zm-3.25,14.28H964.14a.65.65,0,1,1,0-1.3h10.39a.65.65,0,1,1,0,1.3Zm0-3.9H964.14a.65.65,0,1,1,0-1.3h10.39a.65.65,0,1,1,0,1.3Zm0-3.9H964.14a.65.65,0,1,1,0-1.3h10.39a.65.65,0,1,1,0,1.3Z" transform="translate(-948.94 -949.67)" fill="#e3e3e2"/>
-                    </svg>
-                </div>
-                <div class="more-features-item-inf">
-                    <div class="more-features-item-name">
-                        Clean & modular coding
-                    </div>
-                    <div class="more-features-item-classification">
-                        100% Clean, Valid & Well-Commented Coding
-                    </div>
-                    <div class="more-features-description">
-                        Proin in magna a ipsum viverra scelerisque eu nec turp, Nunc vestibulum fringilla accumsan. Praesent arcu turpis.
-                    </div>
-                </div>
-            </div>
-            <div class="more-features-item">
-                <div class="more-features-item-img">
-                    <svg class="mf-cart" data-name="mf-cart" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.79 76.8">
-                        <g>
-                            <path d="M989.73,973.07v33.27h0l-10,10.06-10,10.06-10-10.06-10.67-10.07h0V973.07c0-1.73,1.84-3.14,4.08-3.14h32.63C987.89,969.93,989.73,971.35,989.73,973.07Z" transform="translate(-948.94 -949.67)" fill="#00aa9e"/>
-                            <path d="M989.73,952.81v33.27h0l-10,10.06-10,10.06-10-10.06-10.67-10.07h0V952.81c0-1.73,1.84-3.14,4.08-3.14h32.63C987.89,949.67,989.73,951.08,989.73,952.81Z" transform="translate(-948.94 -949.67)" fill="#404040"/>
-                        </g>
-                        <path d="M979.21,970.91H962.36a1.33,1.33,0,0,0-.31.06l-.54-2.33a.7.7,0,0,0-.68-.54h-2a.7.7,0,1,0,0,1.4h1.46l.87,3.73,1.22,6.1a1.23,1.23,0,0,0,0,.14l-.71,3.21a.7.7,0,0,0,.69.85h15.93a.7.7,0,1,0,0-1.4h-15l.32-1.45a1.28,1.28,0,0,0,.21,0h12.8a1.45,1.45,0,0,0,1.62-1.05l2.28-7A1.25,1.25,0,0,0,979.21,970.91Zm-16.85,15.44a1.4,1.4,0,1,0,1.4-1.4A1.4,1.4,0,0,0,962.36,986.36Zm12.64,0a1.4,1.4,0,1,0,1.4-1.4A1.4,1.4,0,0,0,975,986.36Z" transform="translate(-948.94 -949.67)" fill="#e3e3e2"/>
-                    </svg>
-                </div>
-                <div class="more-features-item-inf">
-                    <div class="more-features-item-name">
-                        The best e-commerce solutions
-                    </div>
-                    <div class="more-features-item-classification">
-                        WooCommerce Fully Integration
-                    </div>
-                    <div class="more-features-description">
-                        Proin in magna a ipsum viverra scelerisque eu nec turp, Nunc vestibulum fringilla accumsan. Praesent arcu turpis.
-                    </div>
-                </div>
-            </div>
-            <div class="more-features-item">
-                <div class="more-features-item-img">
-                    <svg class="mf-lifesaver" data-name="mf-lifesaver" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40.79 76.8">
-                        <g>
-                            <path d="M989.73,973.07v33.27h0l-10,10.06-10,10.06-10-10.06-10.67-10.07h0V973.07c0-1.73,1.84-3.14,4.08-3.14h32.63C987.89,969.93,989.73,971.35,989.73,973.07Z" transform="translate(-948.94 -949.67)" fill="#00aa9e"/>
-                            <path d="M989.73,952.81v33.27h0l-10,10.06-10,10.06-10-10.06-10.67-10.07h0V952.81c0-1.73,1.84-3.14,4.08-3.14h32.63C987.89,949.67,989.73,951.08,989.73,952.81Z" transform="translate(-948.94 -949.67)" fill="#404040"/>
-                        </g>
-                        <path d="M969.33,968.19a9.74,9.74,0,1,0,6.89,2.85A9.71,9.71,0,0,0,969.33,968.19Zm-3.44,13.18a4.87,4.87,0,1,1,3.44,1.43A4.83,4.83,0,0,1,965.89,981.38Zm7.21-11.08-1.88,1.88a5.56,5.56,0,0,0-3.61,0l-1.9-1.9a8.47,8.47,0,0,1,7.38.07Zm-11.47,4,1.9,1.9a6.08,6.08,0,0,0,0,3.61l-1.88,1.88a8.47,8.47,0,0,1-.07-7.38Zm1.68,9.64Zm2.55,1.75,1.92-1.92a5.45,5.45,0,0,0,3.28,0l1.9,1.9a8.47,8.47,0,0,1-7.09.07ZM977,981.55l-1.9-1.9a6.07,6.07,0,0,0,0-3.28l1.91-1.91A8.55,8.55,0,0,1,977,981.55Z" transform="translate(-948.94 -949.67)" fill="#e3e3e2"/>
-                    </svg>
-
-                </div>
-                <div class="more-features-item-inf">
-                    <div class="more-features-item-name">
-                        Awesome friendly support
-                    </div>
-                    <div class="more-features-item-classification">
-                        Free Lifetime Support & Updates
-                    </div>
-                    <div class="more-features-description">
-                        Proin in magna a ipsum viverra scelerisque eu nec turp, Nunc vestibulum fringilla accumsan. Praesent arcu turpis.
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="section-icon-toolbox">
-        <svg class="icon-toolbox" data-name="icon-toolbox" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 26">
-            <path d="M1046.33,1037.38h-8v-2a2,2,0,0,0-2-2h-8a2,2,0,0,0-2,2v2h-8a2,2,0,0,0-2,2v4h32v-4A2,2,0,0,0,1046.33,1037.38Zm-18-2h8v2h-8Zm0,10h8v2h-8Zm10,2a2,2,0,0,1-2,2h-8a2,2,0,0,1-2-2v-2h-10v12a2,2,0,0,0,2,2h28a2,2,0,0,0,2-2v-12h-10Z" transform="translate(-1016.33 -1033.38)" fill="#e3e3e2"/>
-        </svg>
-    </div>
-</section>
-<section class="our-powerful-skill">
-    <div class="wrapper">
-        <div class="dt-title-row">
-            <div class="dt-title-cont">
-                <div class="decor-rombs-left">
-                    <div class="small-romb -dt-darkgreen"></div>
-                    <div class="medium-romb -dt-mediumgreen"></div>
-                    <div class="large-romb -dt-lightgreen"></div>
-                </div>
-                <div class="dt-dec-title"><span>Our powerful</span> skill</div>
-                <div class="decor-rombs-right">
-                    <div class="large-romb -first -dt-lightgreen"></div>
-                    <div class="medium-romb  -second -dt-mediumgreen"></div>
-                    <div class="small-romb -third -dt-darkgreen"></div>
-                </div>
-            </div>
-        </div>
-        <div class="dt-subtitle-row">
-            <h2 class="dt-subtitle">
-                We’re good and experienced at different things and areas and we promise about qulity of our works
-            </h2>
-        </div>
-        <div class="skills-row">
-            <div class="skill-item">
-                <div class="skill-circle -p75">
-                    <p class="skill-percent">75<span>%</span></p>
-                </div>
-                <div class="skill-name">
-                    Web design
-                </div>
-            </div>
-            <div class="skill-item">
-                <div class="skill-circle -p92">
-                    <p class="skill-percent">92<span>%</span></p>
-                </div>
-                <div class="skill-name">
-                    Web development
-                </div>
-            </div>
-            <div class="skill-item">
-                <div class="skill-circle -p68">
-                    <p class="skill-percent">68<span>%</span></p>
-                </div>
-                <div class="skill-name">
-                    Speed optimization
-                </div>
-            </div>
-            <div class="skill-item">
-                <div class="skill-circle -p100">
-                    <p class="skill-percent">100<span>%</span></p>
-                </div>
-                <div class="skill-name">
-                    Customer support
-                </div>
-            </div>
-            <div class="skill-item">
-                <div class="skill-circle -p83">
-                    <p class="skill-percent">83<span>%</span></p>
-                </div>
-                <div class="skill-name">
-                    Marketing
-                </div>
-            </div>
-            <div class="skill-item">
-                <div class="skill-circle -p50">
-                    <p class="skill-percent">50<span>%</span></p>
-                </div>
-                <div class="skill-name">
-                    Advertisement
-                </div>
-            </div>
-        </div>
-    </div>
-</section> -->
 <section class="sample-works">
     <div class="wrapper">
         <div class="lt-title-row">
@@ -1124,7 +908,7 @@
                     <p class="price-func-text">Запись диктора 12 час без редакции</p>
                 </div>
                 <div class="price-button">
-                    Sign up now
+                    Выбрать
                 </div>
             </div>
         </div>
