--- a/index.html
+++ b/index.html
@@ -1016,4 +1016,4 @@
 </html>
 <link rel="stylesheet" href="css/main.min.css">
 <script src="js/scripts.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?callback=myMap" async defer></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDu-7KqeDvWMWA0eF715eCIHBlg8yaz0uo&callback=initMap"></script>
