--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                     <div class="medium-romb -mediumgreen"></div>
                     <div class="large-romb -darkgreen"></div>
                 </div>
-                <div class="lt-dec-title"><span>Наши</span> работы.</div>
+                <div class="lt-dec-title"><span>Наши</span> работы</div>
                 <div class="decor-rombs-right">
                     <div class="large-romb -darkgreen -first"></div>
                     <div class="medium-romb -mediumgreen -second"></div>
@@ -726,11 +726,11 @@
                         <span>"</span>Огромное спасибо и нижайший поклон сотрудникам студии. Результат совместной работы изумительный. Песня достаточно сложная (Фрэнк Синатра "Нью-Йорк"). Исполнитель, отнюдь не певец и последний раз пел сольно, на школьной сцене, лет 10 назад.<span>"</span>
                     </div>
                     <div class="members-say-buttons">
-                        <svg class="ms-button-left" data-name="ms-button-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
+                        <svg class="ms-button-left ms-btn-left" data-name="ms-button-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
                             <rect class="-btn-ms-bg" width="30" height="30" rx="3" ry="3" fill="#e4e3e3"/>
                             <path class="-btn-ms" d="M735.94,938v6.06a.4.4,0,0,1-.68.29l-2.93-2.84L729,938.29a.4.4,0,0,1,0-.57l3.31-3.21,2.93-2.84a.4.4,0,0,1,.68.29Z" transform="translate(-717.33 -923)" fill="#00aa9e"/>
                         </svg>
-                        <svg class="ms-button-right" data-name="ms-button-right" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
+                        <svg class="ms-button-right ms-btn-right" data-name="ms-button-right" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
                             <rect class="-btn-ms-bg" x="717.33" y="923" width="30" height="30" rx="3" ry="3" transform="translate(747.33 953) rotate(180)" fill="#e4e3e3"/>
                             <path class="-btn-ms" d="M728.72,938v-6.06a.4.4,0,0,1,.68-.29l2.93,2.84,3.31,3.21a.4.4,0,0,1,0,.57l-3.31,3.21-2.93,2.84a.4.4,0,0,1-.68-.29Z" transform="translate(-717.33 -923)" fill="#00aa9e"/>
                         </svg>
@@ -744,11 +744,11 @@
                         <span>"</span>Огромное спасибо и нижайший поклон сотрудникам студии. Результат совместной работы изумительный. Песня достаточно сложная (Фрэнк Синатра "Нью-Йорк"). Исполнитель, отнюдь не певец и последний раз пел сольно, на школьной сцене, лет 10 назад.<span>"</span>
                     </div>
                     <div class="members-say-buttons">
-                        <svg class="ms-button-left" data-name="ms-button-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
+                        <svg class="ms-button-left ms-btn-left" data-name="ms-button-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
                             <rect class="-btn-ms-bg" width="30" height="30" rx="3" ry="3" fill="#e4e3e3"/>
                             <path class="-btn-ms" d="M735.94,938v6.06a.4.4,0,0,1-.68.29l-2.93-2.84L729,938.29a.4.4,0,0,1,0-.57l3.31-3.21,2.93-2.84a.4.4,0,0,1,.68.29Z" transform="translate(-717.33 -923)" fill="#00aa9e"/>
                         </svg>
-                        <svg class="ms-button-right" data-name="ms-button-right" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
+                        <svg class="ms-button-right ms-btn-right" data-name="ms-button-right" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
                             <rect class="-btn-ms-bg" x="717.33" y="923" width="30" height="30" rx="3" ry="3" transform="translate(747.33 953) rotate(180)" fill="#e4e3e3"/>
                             <path class="-btn-ms" d="M728.72,938v-6.06a.4.4,0,0,1,.68-.29l2.93,2.84,3.31,3.21a.4.4,0,0,1,0,.57l-3.31,3.21-2.93,2.84a.4.4,0,0,1-.68-.29Z" transform="translate(-717.33 -923)" fill="#00aa9e"/>
                         </svg>
@@ -1016,4 +1016,5 @@
 </html>
 <link rel="stylesheet" href="css/main.min.css">
 <script src="js/scripts.min.js"></script>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDu-7KqeDvWMWA0eF715eCIHBlg8yaz0uo&callback=initMap"></script>
+<script src="https://maps.googleapis.com/maps/api/js?&callback=initMap"
+    async defer></script>
