--- a/index.html
+++ b/index.html
@@ -1016,5 +1016,5 @@
 </html>
 <link rel="stylesheet" href="css/main.min.css">
 <script src="js/scripts.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?&callback=initMap"
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAp5XbA7791HskaH5o8gGjsPKeKXdT6NBc&callback=initMap"
     async defer></script>
